<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/toolbar_bg_color"
    android:fitsSystemWindows="true"
    tools:context="cn.edu.siso.rlxapf.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_bg_color"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_login"
                    android:textSize="@dimen/toolbar_font_size"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_form_top_margin"
            android:layout_marginBottom="@dimen/login_form_bottom_margin"
            android:orientation="vertical"
            android:background="@android:color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line_width"
                android:background="@color/split_line_color"
                android:contentDescription="@string/split_line_txt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/login_form_horizontal_left_padding"
                android:paddingRight="0dp"
                android:orientation="vertical"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/login_form_item_vertical_padding"
                    android:paddingBottom="@dimen/login_form_item_vertical_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/login_form_label_right_margin"
                        android:layout_marginLeft="0dp"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/form_font_size"
                        android:text="@string/login_form_account_label"/>

                    <EditText
                        android:id="@+id/login_form_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_color"
                        android:textSize="@dimen/form_font_size"
                        android:background="@drawable/form_input_bg"
                        android:hint="@string/login_form_account_hint"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/split_line_width"
                    android:background="@color/split_line_color"
                    android:contentDescription="@string/split_line_txt"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/login_form_item_vertical_padding"
                    android:paddingBottom="@dimen/login_form_item_vertical_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/login_form_label_right_margin"
                        android:layout_marginLeft="0dp"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/form_font_size"
                        android:text="@string/login_form_password_label"/>

                    <EditText
                        android:id="@+id/login_form_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_color"
                        android:textSize="@dimen/form_font_size"
                        android:background="@drawable/form_input_bg"
                        android:hint="@string/login_form_password_hint"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line_width"
                android:background="@color/split_line_color"
                android:contentDescription="@string/split_line_txt"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_form_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_btn_horizontal_margin"
            android:layout_marginRight="@dimen/login_form_btn_horizontal_margin"
            android:paddingTop="@dimen/login_form_btn_vertical_padding"
            android:paddingBottom="@dimen/login_form_btn_vertical_padding"
            android:background="@drawable/button_bg_rectangle_radius"
            android:text="@string/login_form_login_txt"
            android:textColor="@color/btn_txt_color"
            android:textSize="@dimen/form_font_size"
            android:minHeight="0dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>
